--- a/asset/font/fontello-entypo/css/fontello-codes.css
+++ b/asset/font/fontello-entypo/css/fontello-codes.css
@@ -1,87 +1,94 @@
 
 .icon-back-in-time:before { content: '\e800'; } /* '' */
 .icon-bar-graph:before { content: '\e801'; } /* '' */
-.icon-briefcase:before { content: '\e802'; } /* '' */
-.icon-calendar:before { content: '\e803'; } /* '' */
-.icon-check:before { content: '\e804'; } /* '' */
-.icon-circle:before { content: '\e805'; } /* '' */
-.icon-clock:before { content: '\e806'; } /* '' */
-.icon-cog:before { content: '\e807'; } /* '' */
-.icon-controller-play:before { content: '\e808'; } /* '' */
-.icon-controller-record:before { content: '\e809'; } /* '' */
-.icon-controller-stop:before { content: '\e80a'; } /* '' */
-.icon-dot-single:before { content: '\e80b'; } /* '' */
-.icon-dots-three-horizontal:before { content: '\e80c'; } /* '' */
-.icon-dots-three-vertical:before { content: '\e80d'; } /* '' */
-.icon-dots-two-horizontal:before { content: '\e80e'; } /* '' */
-.icon-dots-two-vertical:before { content: '\e80f'; } /* '' */
-.icon-email:before { content: '\e810'; } /* '' */
-.icon-export:before { content: '\e811'; } /* '' */
-.icon-fingerprint:before { content: '\e812'; } /* '' */
-.icon-flash:before { content: '\e813'; } /* '' */
-.icon-game-controller:before { content: '\e814'; } /* '' */
-.icon-graduation-cap:before { content: '\e815'; } /* '' */
-.icon-heart-outlined:before { content: '\e816'; } /* '' */
-.icon-heart:before { content: '\e817'; } /* '' */
-.icon-hour-glass:before { content: '\e818'; } /* '' */
-.icon-info-with-circle:before { content: '\e819'; } /* '' */
-.icon-location-pin:before { content: '\e81a'; } /* '' */
-.icon-magnifying-glass:before { content: '\e81b'; } /* '' */
-.icon-mail:before { content: '\e81c'; } /* '' */
-.icon-minus:before { content: '\e81d'; } /* '' */
-.icon-newsletter:before { content: '\e81e'; } /* '' */
-.icon-pin:before { content: '\e81f'; } /* '' */
-.icon-plus:before { content: '\e820'; } /* '' */
-.icon-quote:before { content: '\e821'; } /* '' */
-.icon-reply:before { content: '\e822'; } /* '' */
-.icon-retweet:before { content: '\e823'; } /* '' */
-.icon-rss:before { content: '\e824'; } /* '' */
-.icon-share-alternative:before { content: '\e825'; } /* '' */
-.icon-shareable:before { content: '\e826'; } /* '' */
-.icon-star-outlined:before { content: '\e827'; } /* '' */
-.icon-star:before { content: '\e828'; } /* '' */
-.icon-trophy:before { content: '\e829'; } /* '' */
-.icon-users:before { content: '\e82a'; } /* '' */
-.icon-vinyl:before { content: '\e82b'; } /* '' */
-.icon-warning:before { content: '\e82c'; } /* '' */
-.icon-500px:before { content: '\e82d'; } /* '' */
-.icon-app-store:before { content: '\e82e'; } /* '' */
-.icon-baidu:before { content: '\e82f'; } /* '' */
-.icon-behance:before { content: '\e830'; } /* '' */
-.icon-creative-cloud:before { content: '\e831'; } /* '' */
-.icon-dribbble:before { content: '\e832'; } /* '' */
-.icon-dropbox:before { content: '\e833'; } /* '' */
-.icon-evernote:before { content: '\e834'; } /* '' */
-.icon-facebook-with-circle:before { content: '\e835'; } /* '' */
-.icon-facebook:before { content: '\e836'; } /* '' */
-.icon-flattr:before { content: '\e837'; } /* '' */
-.icon-flickr-with-circle:before { content: '\e838'; } /* '' */
-.icon-flickr:before { content: '\e839'; } /* '' */
-.icon-foursquare:before { content: '\e83a'; } /* '' */
-.icon-github:before { content: '\e83b'; } /* '' */
-.icon-google-drive:before { content: '\e83c'; } /* '' */
-.icon-google-hangouts:before { content: '\e83d'; } /* '' */
-.icon-google-play:before { content: '\e83e'; } /* '' */
-.icon-google-plus:before { content: '\e83f'; } /* '' */
-.icon-grooveshark:before { content: '\e840'; } /* '' */
-.icon-icloud:before { content: '\e841'; } /* '' */
-.icon-instagram:before { content: '\e842'; } /* '' */
-.icon-lastfm:before { content: '\e843'; } /* '' */
-.icon-linkedin:before { content: '\e844'; } /* '' */
-.icon-medium:before { content: '\e845'; } /* '' */
-.icon-onedrive:before { content: '\e846'; } /* '' */
-.icon-picasa:before { content: '\e847'; } /* '' */
-.icon-skype:before { content: '\e848'; } /* '' */
-.icon-slideshare:before { content: '\e849'; } /* '' */
-.icon-tumblr-with-circle:before { content: '\e84a'; } /* '' */
-.icon-tumblr:before { content: '\e84b'; } /* '' */
-.icon-twitter:before { content: '\e84c'; } /* '' */
-.icon-vimeo:before { content: '\e84d'; } /* '' */
-.icon-vine:before { content: '\e84e'; } /* '' */
-.icon-vk:before { content: '\e84f'; } /* '' */
-.icon-windows-store:before { content: '\e850'; } /* '' */
-.icon-youtube:before { content: '\e851'; } /* '' */
-.icon-blogger:before { content: '\e852'; } /* '' */
-.icon-reddit:before { content: '\e853'; } /* '' */
-.icon-stackoverflow:before { content: '\e854'; } /* '' */
-.icon-steam:before { content: '\e855'; } /* '' */
+.icon-bookmark:before { content: '\e802'; } /* '' */
+.icon-bookmarks:before { content: '\e803'; } /* '' */
+.icon-briefcase:before { content: '\e804'; } /* '' */
+.icon-calendar:before { content: '\e805'; } /* '' */
+.icon-check:before { content: '\e806'; } /* '' */
+.icon-chevron-small-down:before { content: '\e807'; } /* '' */
+.icon-chevron-small-left:before { content: '\e808'; } /* '' */
+.icon-chevron-small-right:before { content: '\e809'; } /* '' */
+.icon-chevron-small-up:before { content: '\e80a'; } /* '' */
+.icon-circle:before { content: '\e80b'; } /* '' */
+.icon-clock:before { content: '\e80c'; } /* '' */
+.icon-cog:before { content: '\e80d'; } /* '' */
+.icon-compass:before { content: '\e80e'; } /* '' */
+.icon-controller-play:before { content: '\e80f'; } /* '' */
+.icon-controller-record:before { content: '\e810'; } /* '' */
+.icon-controller-stop:before { content: '\e811'; } /* '' */
+.icon-dot-single:before { content: '\e812'; } /* '' */
+.icon-dots-three-horizontal:before { content: '\e813'; } /* '' */
+.icon-dots-three-vertical:before { content: '\e814'; } /* '' */
+.icon-dots-two-horizontal:before { content: '\e815'; } /* '' */
+.icon-dots-two-vertical:before { content: '\e816'; } /* '' */
+.icon-email:before { content: '\e817'; } /* '' */
+.icon-export:before { content: '\e818'; } /* '' */
+.icon-fingerprint:before { content: '\e819'; } /* '' */
+.icon-flash:before { content: '\e81a'; } /* '' */
+.icon-game-controller:before { content: '\e81b'; } /* '' */
+.icon-graduation-cap:before { content: '\e81c'; } /* '' */
+.icon-heart-outlined:before { content: '\e81d'; } /* '' */
+.icon-heart:before { content: '\e81e'; } /* '' */
+.icon-hour-glass:before { content: '\e81f'; } /* '' */
+.icon-info-with-circle:before { content: '\e820'; } /* '' */
+.icon-location-pin:before { content: '\e821'; } /* '' */
+.icon-magnifying-glass:before { content: '\e822'; } /* '' */
+.icon-mail:before { content: '\e823'; } /* '' */
+.icon-minus:before { content: '\e824'; } /* '' */
+.icon-newsletter:before { content: '\e825'; } /* '' */
+.icon-pin:before { content: '\e826'; } /* '' */
+.icon-plus:before { content: '\e827'; } /* '' */
+.icon-quote:before { content: '\e828'; } /* '' */
+.icon-reply:before { content: '\e829'; } /* '' */
+.icon-retweet:before { content: '\e82a'; } /* '' */
+.icon-rss:before { content: '\e82b'; } /* '' */
+.icon-share-alternative:before { content: '\e82c'; } /* '' */
+.icon-shareable:before { content: '\e82d'; } /* '' */
+.icon-star-outlined:before { content: '\e82e'; } /* '' */
+.icon-star:before { content: '\e82f'; } /* '' */
+.icon-trophy:before { content: '\e830'; } /* '' */
+.icon-users:before { content: '\e831'; } /* '' */
+.icon-vinyl:before { content: '\e832'; } /* '' */
+.icon-warning:before { content: '\e833'; } /* '' */
+.icon-500px:before { content: '\e834'; } /* '' */
+.icon-app-store:before { content: '\e835'; } /* '' */
+.icon-baidu:before { content: '\e836'; } /* '' */
+.icon-behance:before { content: '\e837'; } /* '' */
+.icon-creative-cloud:before { content: '\e838'; } /* '' */
+.icon-dribbble:before { content: '\e839'; } /* '' */
+.icon-dropbox:before { content: '\e83a'; } /* '' */
+.icon-evernote:before { content: '\e83b'; } /* '' */
+.icon-facebook-with-circle:before { content: '\e83c'; } /* '' */
+.icon-facebook:before { content: '\e83d'; } /* '' */
+.icon-flattr:before { content: '\e83e'; } /* '' */
+.icon-flickr-with-circle:before { content: '\e83f'; } /* '' */
+.icon-flickr:before { content: '\e840'; } /* '' */
+.icon-foursquare:before { content: '\e841'; } /* '' */
+.icon-github:before { content: '\e842'; } /* '' */
+.icon-google-drive:before { content: '\e843'; } /* '' */
+.icon-google-hangouts:before { content: '\e844'; } /* '' */
+.icon-google-play:before { content: '\e845'; } /* '' */
+.icon-google-plus:before { content: '\e846'; } /* '' */
+.icon-grooveshark:before { content: '\e847'; } /* '' */
+.icon-icloud:before { content: '\e848'; } /* '' */
+.icon-instagram:before { content: '\e849'; } /* '' */
+.icon-lastfm:before { content: '\e84a'; } /* '' */
+.icon-linkedin:before { content: '\e84b'; } /* '' */
+.icon-medium:before { content: '\e84c'; } /* '' */
+.icon-onedrive:before { content: '\e84d'; } /* '' */
+.icon-picasa:before { content: '\e84e'; } /* '' */
+.icon-skype:before { content: '\e84f'; } /* '' */
+.icon-slideshare:before { content: '\e850'; } /* '' */
+.icon-tumblr-with-circle:before { content: '\e851'; } /* '' */
+.icon-tumblr:before { content: '\e852'; } /* '' */
+.icon-twitter:before { content: '\e853'; } /* '' */
+.icon-vimeo:before { content: '\e854'; } /* '' */
+.icon-vine:before { content: '\e855'; } /* '' */
+.icon-vk:before { content: '\e856'; } /* '' */
+.icon-windows-store:before { content: '\e857'; } /* '' */
+.icon-youtube:before { content: '\e858'; } /* '' */
+.icon-blogger:before { content: '\e859'; } /* '' */
+.icon-reddit:before { content: '\e85a'; } /* '' */
+.icon-stackoverflow:before { content: '\e85b'; } /* '' */
+.icon-steam:before { content: '\e85c'; } /* '' */
