--- a/asset/css/email.css
+++ b/asset/css/email.css
@@ -11,11 +11,12 @@
 // f9f9f9
 */
 
+
 /* ------------------------------------- 
     GLOBAL 
 ------------------------------------- */
 * { 
-  /*margin: 0;*/
+  margin: 0;
   padding: 0;
 }
 * { font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
@@ -23,9 +24,12 @@
 body {
   -webkit-font-smoothing: antialiased; 
   -webkit-text-size-adjust: none; 
-  /*width: 100%!important; */
-  /*height: 100%;*/
+  width: 100%!important; 
+  height: 100%;
 }
+
+table { border-collapse: collapse; border: 0; border-spacing: 0; }
+td { padding: 0; }
 
 /* ------------------------------------- 
     ELEMENTS 
@@ -60,6 +64,10 @@ a.btn {
 a.btn-block { padding: 10px 0px; width:100%; }
 /*a.btn-lg { width: 100%; max-width: 300px; }*/
 
+
+.media {}
+.media-object { width:20%; vertical-align: top; padding-right:10px; }
+
 /* ------------------------------------- 
     HEADER 
 ------------------------------------- */
@@ -92,6 +100,7 @@ p, ul {
   font-weight: normal; 
   font-size: 14px;
   line-height: 1.6;
+  color: #333333;
 }
 p.lead { font-size: 17px; }
 p.last { margin-bottom: 0px; }
@@ -101,8 +110,30 @@ ul li {
   list-style-position: inside;
 }
 
+
 /* ------------------------------------- 
     FOOTER 
 ------------------------------------- */
 p.footer { font-size:12px; line-height:150%; color:#777777; text-align:justify; }
 p.footer a { color: #777777;  }
+
+
+/* ------------------------------------- 
+    CONTENT 
+------------------------------------- */
+.main { 
+  background-color:#ffffff; background:#ffffff; width:100% !important; padding:0; white-space: normal; word-wrap: break-word;
+}
+.container {
+  display: block!important;
+  max-width: 500px!important;
+  margin: 0 auto!important; /* makes it centered */
+  clear: both!important;
+}
+.content {
+  padding: 15px;
+  max-width: 500px;
+  margin: 0 auto;
+  display: block;
+  border-collapse:collapse;
+}
