--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -50,6 +50,13 @@ body {
 /*
 -------------------------------------------------- */
 
+body>footer {
+  font-size: 12px;
+  color: #777777;
+  /*margin-top: 50px;*/
+  padding-top: 20px;
+}
+
 h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child,
 .h1:first-child, .h2:first-child, .h3:first-child, .h4:first-child, .h5:first-child, .h6:first-child { margin-top: 0; }
 
@@ -154,6 +161,24 @@ input:focus, textarea:focus, select:focus, input:active { border: 0 !important; 
 
 .btn-75px { width: 75px; } .btn-80px { width: 80px; } .btn-90px { width: 90px; } .btn-100px { width: 100px; }
 
+.truncate {
+  white-space: nowrap;
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  -webkit-text-overflow: ellipsis;
+
+  /*width: 250px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;*/
+
+  /*text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;*/
+}
+
 section.main>.container { padding-bottom: 30px; }
 
 header .navbar-collapse { max-height: none !important; }
@@ -233,14 +258,6 @@ header .navbar-default .navbar-toggle .icon-bar {
 .media-body .media:first-child { margin-top: 0; }
 .media:first-child { margin-top: 15px; }*/
 
-body>footer {
-  font-size: 12px;
-  color: #777777;
-  /*margin-top: 50px;*/
-  padding-top: 20px;
-}
-body>footer .list-group { display: table; }
-body>footer .list-group-item { background-color: transparent; border: 0; float: left; padding-left: 0; }
 
 .post-item-unseen { border-bottom: 1px solid #DA2E75; }
 
