--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -69,6 +69,7 @@ video { width: 100% !important; height: auto !important; }
 /*@media (max-width: 767px)  { .container { max-width: 650px; } }
 @media (min-width: 1200px) { .container { width: 1020px; } }*/
 
+@media (min-width: 1200px) { .container { width: 1020px; } }
 
 section.main .container-slim { max-width: 500px; }
 
@@ -102,12 +103,6 @@ input, textarea, pre,
 
 input, textarea, select, .input-group-addon,
 input:focus, textarea:focus, select:focus, input:active { border: 0 !important; }
-
-.text-gray-darker   { color: #222222; }
-.text-gray-dark     { color: #333333; }
-.text-gray          { color: #555555; }
-.text-gray-light    { color: #777777; }
-.text-gray-lighter  { color: #eeeeee; }
 
 .link-dark { color: #333333; } .link-dark:hover { color: #DA2E75; }
 .link-light { color: #777777; } .link-light:hover { color: #DA2E75; }
@@ -291,48 +286,6 @@ header .navbar-default .navbar-toggle .icon-bar {
 
 .player-area:hover { cursor: pointer !important; cursor: hand !important; }
 
-.landing h1, .landing h2, .landing h3 { font-weight: 300; }
-.landing h1 { font-size: 32px; }
-.landing h2 { font-size: 28px; }
-.landing .bullets { padding-top: 20px; padding-bottom: 20px; }
-/*.landing p { font-weight: 300;  color: #555555; }*/
-
-.landing .credit {
-  position: absolute;
-  bottom: 30px;
-  right: 30px;
-  font-weight: 300;
-  font-size: 12px;
-  padding: 5px;
-  /*margin-right: 30%;*/
-  /*margin-left: 2%;*/
-  line-height: 1.8;
-  width: 100%;
-  float: right;
-  text-align: right;
-}
-.landing .dark-highlight {
-  background-color: rgba(0,0,0,0.9);
-  color: white;
-  box-shadow: 5px 0 0 0 rgba(0,0,0,0.9),-5px 0 0 0 rgba(0,0,0,0.9) !important;
-  padding: 0 0 2px 0;
-}
-.landing .dark-highlight a { color: #fff; }
-
-.landing .bg-cover {
-  background-color: transparent;
-}
-.landing .bg-cover ::before { background-color: rgba(0,0,0,0.3); }
-.landing .floating-title {
-  position: absolute;
-  top: 10%;
-  text-align: center;
-  font-weight: 300;
-  color: white;
-  margin-right: 15%;
-  margin-left: 15%;
-}
-
 .bootstrap-datetimepicker-widget table td.active, .bootstrap-datetimepicker-widget table td.active:hover {
   background-color: #DA2E75 !important;
 }
@@ -356,11 +309,11 @@ header .navbar-default .navbar-toggle .icon-bar {
 .post-text-object .media { margin-top: 2px; }
 .post-text-object { margin-top: 10px; margin-bottom: 20px; }
 
-.font-weight-lightest { font-weight: 100 }
+/*.font-weight-lightest { font-weight: 100 }
 .font-weight-lighter { font-weight: 200 }
 .font-weight-light { font-weight: 300 }
 .font-weight-bold { font-weight: 500 }
-.font-weight-bolder { font-weight: 500 }
+.font-weight-bolder { font-weight: 500 }*/
 
 /*.header-user h1 { font-size: 32px; }*/
 .header-user { margin-top: 30px; margin-bottom: 10px; }
