--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -110,6 +110,8 @@ input:focus, textarea:focus, select:focus, input:active { border: 0 !important; 
 .link-transparent:hover { opacity: 0.8 }
 .link-like { color: #DA2E75; } .link-like:hover { color: #DA2E75; }
 
+.text-white { color: #FFF; }
+
 .full-width { width: 100% !important; }
 .full-height { height: 100% !important; }
 .full-size { width: 100% !important; height: 100% !important; }
@@ -191,29 +193,24 @@ input:focus, textarea:focus, select:focus, input:active { border: 0 !important; 
 
 section.main>.container { padding-bottom: 30px; }
 
-header .navbar-collapse { max-height: none !important; }
+.navbar-collapse { max-height: none !important; }
 
-header .navbar-default, .dropdown-menu {
-    background-color: #ffffff;
-}
-header .navbar { border-width: 0px; padding-top: 20px; }
+.navbar-inverse { background-color: #231e1f; }
+.navbar-inverse.affix-top { background-color: transparent; }
+.navbar-inverse.affix { background-color: #231e1f; }
+@media (max-width: 768px) { .navbar-inverse.affix-top { background-color: #231e1f; } }
 
-header .navbar-default .navbar-nav li a { text-transform: uppercase; }
-/*header .navbar-default .navbar-nav>li>a {
-    color: #777777; background-color: #ffffff;
-}*/
-header .navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
-    color: #555555;
-    background-color: #ffffff;
-}
-header .navbar-default .navbar-nav>.active>a {
-    color: #555555;
-    background-color: #ffffff;
-}
-header .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:hover, .navbar-default .navbar-nav>.open>a:focus {
-    color: #555555;
-    background-color: #eeeeee;
-}
+.navbar-default, .dropdown-menu { background-color: white; }
+.navbar-default.affix-top { background-color: transparent; }
+.navbar-default.affix { background-color: white; } 
+@media (max-width: 768px) { .navbar-default.affix-top { background-color: white; } }
+
+.navbar { /*border-width: 0px;*/ padding-top: 10px; }
+.navbar { border-color: transparent; }
+.navbar.affix-top { border-color: transparent; }
+.navbar-default.affix { border-color: #eeeeee; }
+.navbar-inverse.affix { border-color: transparent; }
+
 .dropdown-menu {
     background-color: #eeeeee;
 }
@@ -222,26 +219,21 @@ header .navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:
     color: #555555;
     background-color: #ddd;
 }
-header .navbar-brand {
+.navbar-brand {
     padding: 5px 15px;
 }
-
-@media (max-width: 767px) {
-    header .navbar-default .navbar-nav .open .dropdown-menu>li>a {
-        color: #777777;
-    }
+.navbar-brand>img {
+    display: inline; 
 }
 
-header .navbar-default .navbar-toggle {
+.navbar-default .navbar-toggle, .navbar-inverse .navbar-toggle {
     border: 0;
 }
-header .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus,
+.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
     background-color: transparent;
 }
-header .navbar-default .navbar-toggle .icon-bar {
-    background-color: #777777;
-    width: 30px;
-}
+
 .dropdown-menu .divider {
     background-color: #777777;
 }
@@ -250,11 +242,62 @@ header .navbar-default .navbar-toggle .icon-bar {
 .navbar-form .form-group, .navbar-form .form-control { width: 100% !important; }
 .navbar-form { border: none; }
 
-/*header .navbar-collapse { background-color: #777777; color: #555555; }*/
+/*.navbar-collapse { background-color: #777777; color: #555555; }*/
 
 /*header ul.nav li.dropdown:hover > ul.dropdown-menu { display: block; }*/
 
 /*.head-padding { padding-top: 70px; }*/
+
+.header-bg {
+  background-image: url('../images/home/9_squares_dot.gif');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+  text-align: center;
+  color: white;
+}
+.header-bg .intro-text {
+  padding-top: 100px;
+  padding-bottom: 50px;
+}
+.header-bg .intro-text .intro-lead {
+  font-style: italic;
+  font-size: 22px;
+  line-height: 22px;
+  margin-bottom: 25px;
+}
+.header-bg .intro-text .intro-heading {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 50px;
+  line-height: 50px;
+  margin-bottom: 25px;
+}
+@media (min-width: 768px) {
+  .header-bg .intro-text {
+    padding-top: 300px;
+    padding-bottom: 200px;
+  }
+  .header-bg .intro-text .intro-lead {
+    font-style: italic;
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 25px;
+  }
+  .header-bg .intro-text .intro-heading {
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 75px;
+    line-height: 75px;
+    margin-bottom: 50px;
+  }
+}
+
+.header-bg { padding-bottom: 45px; }
 
 .notif-count { left: 30px; position: absolute; top: 13px; z-index: 999; }
 
