--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -200,7 +200,7 @@ section.main>.container { padding-bottom: 30px; }
 .navbar-inverse.affix { background-color: #231e1f; }
 @media (max-width: 768px) { .navbar-inverse.affix-top { background-color: #231e1f; } }
 
-.navbar-default, .dropdown-menu { background-color: white; }
+.navbar-default, .dropdown-menu { background-color: transparent; }
 .navbar-default.affix-top { background-color: transparent; }
 .navbar-default.affix { background-color: white; } 
 @media (max-width: 768px) { .navbar-default.affix-top { background-color: white; } }
@@ -242,62 +242,36 @@ section.main>.container { padding-bottom: 30px; }
 .navbar-form .form-group, .navbar-form .form-control { width: 100% !important; }
 .navbar-form { border: none; }
 
-/*.navbar-collapse { background-color: #777777; color: #555555; }*/
-
-/*header ul.nav li.dropdown:hover > ul.dropdown-menu { display: block; }*/
-
-/*.head-padding { padding-top: 70px; }*/
+.head-padding { padding-top: 70px; }
 
 .header-bg {
-  background-image: url('../images/home/9_squares_dot.gif');
+  background: #f0f1eb url('../images/home/tumblr_oan67aYRRE1qinh1vo1_1280.jpg');
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-position: center center;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-  text-align: center;
-  color: white;
+  background-position: bottom right;
+  /*-webkit-background-size: cover;*/
+  /*-moz-background-size: cover;*/
+  /*background-size: cover;*/
+  /*-o-background-size: cover;*/
+  /*text-align: center;*/
+  
+  height:100%;
 }
-.header-bg .intro-text {
-  padding-top: 100px;
-  padding-bottom: 50px;
-}
-.header-bg .intro-text .intro-lead {
-  font-style: italic;
-  font-size: 22px;
-  line-height: 22px;
-  margin-bottom: 25px;
-}
-.header-bg .intro-text .intro-heading {
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 50px;
-  line-height: 50px;
-  margin-bottom: 25px;
-}
-@media (min-width: 768px) {
-  .header-bg .intro-text {
-    padding-top: 300px;
-    padding-bottom: 200px;
-  }
-  .header-bg .intro-text .intro-lead {
-    font-style: italic;
-    font-size: 40px;
-    line-height: 40px;
-    margin-bottom: 25px;
-  }
-  .header-bg .intro-text .intro-heading {
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 75px;
-    line-height: 75px;
-    margin-bottom: 50px;
-  }
+.header-bg .container {
+    padding-top: 90px;
+    padding-bottom: 50px;
 }
 
-.header-bg { padding-bottom: 45px; }
+
+@media (min-width: 768px) {
+    .header-bg h1 {
+        font-size: 60px;
+    }
+    .header-bg {
+        padding-top: 150px;
+        padding-bottom: 100px;
+    }
+}
 
 .notif-count { left: 30px; position: absolute; top: 13px; z-index: 999; }
 
@@ -370,9 +344,10 @@ section.main>.container { padding-bottom: 30px; }
 .img-margin-bottom-20 { padding-bottom: 20px; }
 
 .landing-jumbotron {
-    background: url(../images/home/9-squares-dotdotdot-dstanfield-final-dribbb.gif);
+    /*background: url(../images/home/9-squares-dotdotdot-dstanfield-final-dribbb.gif);*/
     /*background: #333 url(../images/home/9-squares-dotdotdot-dstanfield-final-dribbb.gif) no-repeat center center fixed;
     background-size: cover;*/
-    color: white;
-    height: 600px;
+    background: transparent;
+    /*color: white;*/
+    /*height: 600px;*/
 }
