--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -198,8 +198,6 @@ section.main>.container { padding-bottom: 30px; }
     background-color: transparent;
 }
 
-.navbar-brand { padding: 7px 15px; }
-
 .bg-F0F1EB { background-color: #F0F1EB; }
 
 
@@ -225,12 +223,12 @@ section.main>.container { padding-bottom: 30px; }
 }
 
 .home-banner {
-    padding-top: 150px;
-    padding-bottom: 160px;
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
-.home-banner h1 {
+/*.home-banner h1 {
     font-size: 60px;
-}
+}*/
 
 .home-banner-2 h2 {
     padding-top: 15px;
@@ -308,7 +306,7 @@ section.main>.container { padding-bottom: 30px; }
 .font-weight-bolder { font-weight: 500 }*/
 
 /*.header-user h1 { font-size: 32px; }*/
-.header-user { margin-top: 30px; margin-bottom: 10px; }
+.header-user { margin-top: 150px; }
 
 .post-media-icon {
     position: absolute;
