--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -98,6 +98,8 @@ img.emoji {
 input, textarea, pre,
 .alert, .well, .btn, .input-group-addon, .dropdown-menu, .list-group-item, .modal-content, .panel, .panel-body { border: 0 !important; }
 
+.btn { padding: 7px 12px; }
+
 input, textarea, select, .input-group-addon,
 input:focus, textarea:focus, select:focus, input:active { border: 0 !important; }
 
@@ -199,12 +201,7 @@ section.main>.container { padding-bottom: 30px; }
 }
 
 .bg-F0F1EB { background-color: #F0F1EB; }
-
-
-@media (min-width: 768px) { .navbar-form { width: 420px; } }
-.navbar-form .form-group, .navbar-form .form-control { width: 100% !important; }
-.navbar-form { border: none; }
-
+ 
 
 .head-padding { padding-top: 50px; }
 
@@ -213,54 +210,15 @@ section.main>.container { padding-bottom: 30px; }
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: bottom right;
-  /*-webkit-background-size: cover;*/
-  /*-moz-background-size: cover;*/
-  /*background-size: cover;*/
-  /*-o-background-size: cover;*/
-  /*text-align: center;*/
   
   height:100%;
 }
-
 .home-banner {
     padding-top: 200px;
     padding-bottom: 200px;
 }
-/*.home-banner h1 {
-    font-size: 60px;
-}*/
-
-.home-banner-2 h2 {
-    padding-top: 15px;
-}
-
-@media (min-width: 768px) {
-    /*.home-banner h1 {
-        font-size: 60px;
-    }*/
-    /*.home-banner {
-        padding-top: 150px;
-        padding-bottom: 100px;
-    }*/
-}
-
-.notif-count { left: 30px; position: absolute; top: 13px; z-index: 999; }
-
-.label-default-2 { color: inherit; }
-
-.badge { border-radius: 1px; }
-
-.team .media { padding-bottom: 20px; }
-
-/*.infinite-container .infinite-item:first-child .media:first-child { margin-top: 0; }
-.media-body .media:first-child { margin-top: 0; }
-.media:first-child { margin-top: 15px; }*/
 
 .infinite-container>.infinite-item>.media { margin-top: 15px; }
-
-
-.post-item-unseen { border-bottom: 1px solid #DA2E75; }
-
 
 .share-icons .nav-justified>li {
     display: table-cell;
@@ -316,19 +274,6 @@ section.main>.container { padding-bottom: 30px; }
 
 .img-margin-bottom-20 { padding-bottom: 20px; }
 
-.landing-jumbotron {
-    /*background: url(../images/home/9-squares-dotdotdot-dstanfield-final-dribbb.gif);*/
-    /*background: #333 url(../images/home/9-squares-dotdotdot-dstanfield-final-dribbb.gif) no-repeat center center fixed;
-    background-size: cover;*/
-    background: transparent;
-    /*color: white;*/
-    /*height: 600px;*/
-}
-
-.landing .lead-2 {
-    font-size: 18px;
-    font-weight: 200;
-}
 .typed-cursor{
     opacity: 1;
     -webkit-animation: blink 0.7s infinite;
