--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -149,6 +149,17 @@ input:focus, textarea:focus, select:focus, input:active { border: 0 !important; 
 .nav-stacked>li>a { background-color: transparent; }
 /*.nav-tabs>li>a { color: #555555; }*/
 
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
+    border-color: transparent;
+    border-bottom: 1px solid #666;
+}
+
+.nav-tabs>li>a:hover, .nav-tabs>li>a:focus {
+    text-decoration: none;
+    background-color: #fff;
+    border-color: transparent;
+    border-bottom: 1px solid #bbb;
+}
 
 /*.nav-tabs.nav-stacked>li+li { margin-top: 0; }*/
 @media (min-width: 768px) { 
@@ -164,13 +175,11 @@ input:focus, textarea:focus, select:focus, input:active { border: 0 !important; 
 }
 
 .nav-tabs.nav-justified>li>a { border: none !important; }
-/*.nav-tabs.nav-justified>.active>a, .nav-tabs.nav-justified>.active>a:hover, .nav-tabs.nav-justified>.active>a:focus {
-    background-color: #ffffff; color: inherit; }
-*/
-/*.list-group-item { background-color: #f9f9f9; }*/
-/*.list-group>.list-group-item+.list-group-item { margin-top: 2px; margin-left: 0; }*/
 
-.btn-75px { width: 75px; } .btn-80px { width: 80px; } .btn-90px { width: 90px; } .btn-100px { width: 100px; }
+.btn-75px { width: 75px; padding: 7px 0px; }
+.btn-80px { width: 80px; padding: 7px 0px; }
+.btn-90px { width: 90px; padding: 7px 0px; }
+.btn-100px { width: 100px; padding: 7px 0px; }
 
 .truncate {
     white-space: nowrap;
