--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -119,6 +119,8 @@ input:focus, textarea:focus, select:focus, input:active { border: 0 !important; 
 .steps .progress { height: 2px; }
 .steps .progress-bar { line-height: 2px; }
 
+.word-break { word-break: break-word; }
+
 .bg-cover {
     background-color: #f9f9f9;
     background-position: center center;
