--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -213,6 +213,7 @@ section.main>.container { padding-bottom: 30px; }
 
 .navbar-form { border: 0; }
 .navbar-brand { padding: 10px 15px; }
+.navbar-toggle { padding: 10px 10px; }
 
 .bg-F0F1EB { background-color: #F0F1EB; }
 .bg-F0F1EB .form-control, .bg-F0F1EB .input-group-addon{ background-color: white; }
