--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -237,6 +237,7 @@ section.main>.container { padding-bottom: 30px; }
         background-attachment: scroll;
         background-position: bottom right;
     }
+    .home-banner h1 { font-size: 40px; }
 }
 @media (min-width: 992px) {
     .home-banner {
@@ -247,15 +248,16 @@ section.main>.container { padding-bottom: 30px; }
 
         height:100%;
     }
+    .home-banner h1 { font-size: 45px; }
 }
 .home-banner {
     padding-top: 200px;
-    padding-bottom: 230px;
+    padding-bottom: 150px;
 }
 @media (max-width: 767px) {
     .home-banner {
         padding-top: 100px;
-        padding-bottom: 550px;
+        padding-bottom: 530px;
     }
 }
 
