--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -42,7 +42,7 @@ http://google.github.io/material-design-icons/
 
 .demo-layout-transparent-home {
     background:
-        url('../images/home/Untitled.jpg');
+        url('../images/tumblr_oan67aYRRE1qinh1vo1_12801.jpg');
     background-size: cover;
     background-position: 25% 50%;
 }
